--- a/package.json
+++ b/package.json
@@ -24,16 +24,17 @@
     "@gorhom/bottom-sheet": "5.0.0-alpha.11",
     "@legendapp/motion": "2.4.0",
     "@react-aria/utils": "3.29.0",
-    "@react-navigation/native": "7.1.6",
+    "@react-navigation/native": "^7.1.6",
     "babel-plugin-module-resolver": "5.0.2",
     "dom-helpers": "5.2.1",
-    "expo": "53.0.20",
-    "expo-font": "13.3.1",
-    "expo-linking": "7.1.5",
-    "expo-router": "5.1.4",
-    "expo-splash-screen": "0.30.8",
+    "expo": "~53.0.22",
+    "expo-font": "~13.3.2",
+    "expo-linking": "~7.1.7",
+    "expo-router": "~5.1.5",
+    "expo-secure-store": "~14.2.4",
+    "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "2.2.3",
-    "expo-system-ui": "5.0.7",
+    "expo-system-ui": "~5.0.11",
     "expo-web-browser": "14.2.0",
     "lucide-react-native": "0.510.0",
     "nativewind": "4.1.23",
@@ -45,18 +46,19 @@
     "react-native-reanimated": "3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "4.11.1",
-    "react-native-svg": "15.12.0",
+    "react-native-svg": "15.11.2",
     "react-native-web": "0.20.0",
     "react-stately": "3.39.0",
     "tailwind-variants": "0.1.20",
-    "tailwindcss": "3.4.17"
+    "tailwindcss": "3.4.17",
+    "zod": "4.1.5"
   },
   "devDependencies": {
     "@biomejs/biome": "2.1.2",
-    "@babel/core": "7.25.2",
+    "@babel/core": "^7.26.0",
     "@types/react": "19.0.10",
-    "jest": "29.2.1",
-    "jest-expo": "53.0.5",
+    "jest": "~29.7.0",
+    "jest-expo": "~53.0.10",
     "react-test-renderer": "19.0.0",
     "typescript": "5.8.3"
   },
