--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@gluestack-ui/core": "3.0.2",
     "@gluestack-ui/utils": "3.0.2",
     "@gorhom/bottom-sheet": "5.0.0-alpha.11",
+    "@hookform/resolvers": "5.2.1",
     "@legendapp/motion": "2.4.0",
     "@react-aria/utils": "3.29.0",
     "@react-navigation/native": "^7.1.6",
@@ -30,7 +31,7 @@
     "expo": "~53.0.22",
     "expo-font": "~13.3.2",
     "expo-linking": "~7.1.7",
-    "expo-router": "~5.1.5",
+    "expo-router": "~5.1.6",
     "expo-secure-store": "~14.2.4",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "2.2.3",
@@ -41,6 +42,7 @@
     "react": "19.0.0",
     "react-aria": "3.41.1",
     "react-dom": "19.0.0",
+    "react-hook-form": "7.62.0",
     "react-native": "0.79.5",
     "react-native-css-interop": "0.1.22",
     "react-native-reanimated": "3.17.4",
@@ -54,8 +56,8 @@
     "zod": "4.1.5"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.1.2",
     "@babel/core": "^7.26.0",
+    "@biomejs/biome": "2.1.2",
     "@types/react": "19.0.10",
     "jest": "~29.7.0",
     "jest-expo": "~53.0.10",
