⚙️ config: update config files

--- a/app.json
+++ b/app.json
@@ -28,12 +28,12 @@
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": [
-      "expo-router",
-      "expo-web-browser"
-    ],
+    "plugins": ["expo-router", "expo-web-browser"],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "CLERK_PUBLISHABLE_KEY": "${CLERK_PUBLISHABLE_KEY}"
     }
   }
 }
