--- a/package.json
+++ b/package.json
@@ -25,10 +25,13 @@
     "@hookform/resolvers": "5.2.1",
     "@legendapp/motion": "2.4.0",
     "@react-aria/utils": "3.29.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/native": "^7.1.6",
+    "axios": "1.12.2",
     "babel-plugin-module-resolver": "5.0.2",
     "dom-helpers": "5.2.1",
     "expo": "~53.0.22",
+    "expo-auth-session": "~6.2.1",
     "expo-font": "~13.3.2",
     "expo-linking": "~7.1.7",
     "expo-router": "~5.1.6",
