--- a/package.json
+++ b/package.json
@@ -18,41 +18,45 @@
   "dependencies": {
     "@clerk/clerk-expo": "2.14.28",
     "@expo/html-elements": "0.12.5",
-    "@expo/vector-icons": "14.1.0",
+    "@expo/metro-runtime": "~6.1.2",
+    "@expo/vector-icons": "^15.0.2",
     "@gluestack-ui/core": "3.0.2",
     "@gluestack-ui/utils": "3.0.2",
     "@gorhom/bottom-sheet": "5.0.0-alpha.11",
     "@hookform/resolvers": "5.2.1",
     "@legendapp/motion": "2.4.0",
     "@react-aria/utils": "3.29.0",
-    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/native": "^7.1.6",
     "axios": "1.12.2",
     "babel-plugin-module-resolver": "5.0.2",
     "dom-helpers": "5.2.1",
-    "expo": "~53.0.23",
-    "expo-auth-session": "~6.2.1",
-    "expo-font": "~13.3.2",
-    "expo-linking": "~7.1.7",
-    "expo-router": "~5.1.7",
-    "expo-secure-store": "~14.2.4",
-    "expo-splash-screen": "~0.30.10",
-    "expo-status-bar": "2.2.3",
-    "expo-system-ui": "~5.0.11",
-    "expo-web-browser": "14.2.0",
+    "expo": "54.0.10",
+    "expo-auth-session": "~7.0.8",
+    "expo-constants": "~18.0.9",
+    "expo-font": "~14.0.8",
+    "expo-linking": "~8.0.8",
+    "expo-router": "~6.0.8",
+    "expo-secure-store": "~15.0.7",
+    "expo-splash-screen": "~31.0.10",
+    "expo-status-bar": "~3.0.8",
+    "expo-system-ui": "~6.0.7",
+    "expo-web-browser": "~15.0.7",
     "lucide-react-native": "0.510.0",
     "nativewind": "4.1.23",
-    "react": "19.0.0",
+    "react": "19.1.0",
     "react-aria": "3.41.1",
-    "react-dom": "19.0.0",
+    "react-dom": "19.1.0",
     "react-hook-form": "7.62.0",
-    "react-native": "0.79.6",
+    "react-native": "0.81.4",
     "react-native-css-interop": "0.1.22",
-    "react-native-reanimated": "3.17.4",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "4.11.1",
-    "react-native-svg": "15.11.2",
-    "react-native-web": "0.20.0",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
+    "react-native-web": "^0.21.0",
+    "react-native-worklets": "0.5.1",
     "react-stately": "3.39.0",
     "tailwind-variants": "0.1.20",
     "tailwindcss": "3.4.17",
@@ -61,11 +65,11 @@
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@biomejs/biome": "2.1.2",
-    "@types/react": "19.0.10",
+    "@types/react": "~19.1.10",
     "jest": "~29.7.0",
-    "jest-expo": "~53.0.10",
+    "jest-expo": "~54.0.12",
     "react-test-renderer": "19.0.0",
-    "typescript": "5.8.3"
+    "typescript": "~5.9.2"
   },
   "private": true,
   "trustedDependencies": [
