--- a/package.json
+++ b/package.json
@@ -31,16 +31,19 @@
     "axios": "1.12.2",
     "babel-plugin-module-resolver": "5.0.2",
     "dom-helpers": "5.2.1",
-    "expo": "54.0.10",
+    "expo": "54.0.17",
     "expo-auth-session": "~7.0.8",
-    "expo-constants": "~18.0.9",
-    "expo-font": "~14.0.8",
+    "expo-constants": "~18.0.10",
+    "expo-document-picker": "^14.0.7",
+    "expo-font": "~14.0.9",
+    "expo-image-picker": "^17.0.8",
     "expo-linking": "~8.0.8",
-    "expo-router": "~6.0.8",
+    "expo-notifications": "^0.32.12",
+    "expo-router": "~6.0.13",
     "expo-secure-store": "~15.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
-    "expo-system-ui": "~6.0.7",
+    "expo-system-ui": "~6.0.8",
     "expo-web-browser": "~15.0.7",
     "lucide-react-native": "0.510.0",
     "nativewind": "4.1.23",
@@ -48,7 +51,7 @@
     "react-aria": "3.41.1",
     "react-dom": "19.1.0",
     "react-hook-form": "7.62.0",
-    "react-native": "0.81.4",
+    "react-native": "0.81.5",
     "react-native-css-interop": "0.1.22",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.1",
@@ -67,7 +70,7 @@
     "@biomejs/biome": "2.1.2",
     "@types/react": "~19.1.10",
     "jest": "~29.7.0",
-    "jest-expo": "~54.0.12",
+    "jest-expo": "~54.0.13",
     "react-test-renderer": "19.0.0",
     "typescript": "~5.9.2"
   },
